# nexo-serverless

./: .gitignore  README.md  a.css  a.js  dev.cmd  package.json  pnpm-lock.yaml  vite.config.ts
apps/admin/: package.json  tailwind.config.js  tsconfig.json  vite.config.ts
apps/admin/src/: main.tsx
apps/admin/src/components/: Navbar.tsx
apps/admin/src/pages/: Dashboard.tsx  FunctionEditor.tsx  Functions.tsx  Home.tsx
apps/codex/: index.html  package.json  tsconfig.json  vite.config.ts
apps/codex/src/: index.css  main.tsx
apps/codex/src/components/: ChatPanel.tsx  FileEditor.tsx  ParticleArrayLoader.tsx  WebContainerPreview.tsx
apps/codex/src/components/ui/: avatar.tsx  badge.tsx  button.tsx  card.tsx  input.tsx  scroll-area.tsx  textarea.tsx  tooltip.tsx
apps/codex/src/lib/: api.ts
apps/codex/src/pages/: AICodeGenerator.tsx
apps/web/: index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
apps/web/src/: App.tsx  index.css  main.tsx
apps/web/src/components/: ParticleArrayLoader.tsx  WebContainerPreview.tsx
apps/web/src/lib/: api.ts  webcontainer.ts
apps/web/src/pages/: AICodeGenerator.tsx  FunctionEditor.tsx  Functions.tsx
runtime/: Cargo.toml
runtime/src/: api.rs  function.rs  isolate.rs  main.rs  pool.rs  runtime.rs  site.rs
scripts/: dev.mjs  dev.ps1  dev.sh
src/: index.css  main.tsx
src/components/: Navbar.tsx  ParticleArrayLoader.tsx  WebContainerPreview.tsx
src/lib/: api.ts  projectTemplates.ts  webcontainer.ts
src/pages/: AICodeGenerator.tsx  Dashboard.tsx  FunctionEditor.tsx  Functions.tsx  Home.tsx
