[package]
name = "nexo-runtime"
version = "0.1.0"
edition = "2021"
description = "Nexo Serverless Runtime - V8 Isolate based function execution engine"

[dependencies]
# V8 引擎绑定
v8 = "0.83.1"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# HTTP server
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
uuid = { version = "1.6", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"
once_cell = "1.19"
parking_lot = "0.12"

[dev-dependencies]
tokio-test = "0.4"

[build-dependencies]
# V8 需要这个来下载预编译的二进制文件
